predicted one sample

--- a/code_alongs/Lec01_linear_refression.ipynb
+++ b/code_alongs/Lec01_linear_refression.ipynb
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1041,6 +1041,60 @@
     "model.fit(scaled_X_train, y_train)\n",
     "print(f\"{model.intercept_ = }\")\n",
     "print(f\"{model.coef_ = }\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.54988164, 0.63709677, 0.52286282])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaled_X_test[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_sample_features = array([0.54988164, 0.63709677, 0.52286282])\n",
+      "test_sample_lable = 16.9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([16.5653963])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_sample_features = scaled_X_test[0]\n",
+    "test_sample_lable = y_test.values[0]\n",
+    "\n",
+    "print(f\"{test_sample_features = }\")\n",
+    "print(f\"{test_sample_lable = }\")\n",
+    "\n",
+    "model.predict(test_sample_features.reshape(1,-1))"
    ]
   }
  ],
