--- a/code_alongs/Lec_06_gridsearch.ipynb
+++ b/code_alongs/Lec_06_gridsearch.ipynb
@@ -244,7 +244,29 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "pipe_kln = Pipeline([(\"scaler\", scaler), (\"kln\", KNeighborsClassifier())])\n",
+    "\n",
+    "pipe_logistic_regression = Pipeline(\n",
+    "    [\n",
+    "        (\"scaler\", scaler),\n",
+    "        (\n",
+    "            \"logistic\",\n",
+    "            LogisticRegression(\n",
+    "                solver=\"saga\", penalty=\"elasticnet\", multi_class=\"ovr\", max_iter=10000\n",
+    "            ),\n",
+    "        ),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# dictionary -> key: pipeline_step__parameter, value: [1, 2, ..., 49] \n",
+    "para_grid_kln = {\"kln__n_neighbors\": list(range(1,50))}\n",
+    "\n",
+    "para_grid_logistic_regression = {\"logistic__l1_ratio\": np.linspace(0,1,20)}"
    ]
   }
  ],
