--- a/labs/lab1.ipynb
+++ b/labs/lab1.ipynb
@@ -582,7 +582,7 @@
     }
    ],
    "source": [
-    "# Step 2: Calculate the average rating for each movie\n",
+    "#Calculate the average rating for each movie\n",
     "for movie_id, movie_name in zip(top_10_movie_ids, top_10_movie_names):\n",
     "    movie_ratings = df_ratings[df_ratings['movieId'] == movie_id]['rating']\n",
     "    average_rating = movie_ratings.mean()\n",
@@ -682,7 +682,6 @@
     "# Counting the number of ratings per movie\n",
     "ratings_per_movie = df_ratings['movieId'].value_counts().sort_index()\n",
     "\n",
-    "# Plotting\n",
     "plt.figure(figsize=(12,6))\n",
     "plt.plot(ratings_per_movie.index, ratings_per_movie.values)\n",
     "plt.title('Number of Ratings per Movie')\n",
@@ -758,7 +757,6 @@
     }
    ],
    "source": [
-    "# Plotting \n",
     "plt.figure(figsize=(12,6))\n",
     "sns.barplot(x=genres.values, y=genres.index)\n",
     "plt.title(\"Distribution of Genres\")\n",
@@ -798,7 +796,7 @@
     "    average_rating = movie_ratings.mean()\n",
     "    average_ratings.append(average_rating)\n",
     "\n",
-    "# Plotting\n",
+    "\n",
     "plt.figure(figsize=(10,8))\n",
     "plt.barh(top_10_movie_names, average_ratings)\n",
     "plt.title('Average Rating for Top 10 Movies')\n",
@@ -907,7 +905,7 @@
     }
    ],
    "source": [
-    "# User input and fuzzy matching (unchanged)\n",
+    "# User input and fuzzy matching\n",
     "movie_title = input(\"Enter the title of a movie: \")\n",
     "matched_title = process.extractOne(movie_title, df_movies['title'])[0]\n",
     "\n",
@@ -1025,7 +1023,7 @@
     "  # Extract genre from the input movie\n",
     "  input_genre = filtered_movie['genres'].values[0]\n",
     "\n",
-    "  # Filter movies based on genre (assuming no year filtering)\n",
+    "  # Filter movies based on genre\n",
     "  filtered_movies = df_merged[df_merged['genres'] == input_genre]\n",
     "  \n",
     "filtered_movies.describe()"
@@ -2416,7 +2414,7 @@
    "source": [
     "def recommender(movie_title, mat_movies_users, model_knn, n_recommendations, df_movies):\n",
     "\n",
-    "    # 1. Find Movie ID (Assuming movie titles are present)\n",
+    "    # 1. Find Movie ID \n",
     "    movie_id = df_movies[df_movies[\"title\"] == matched_title][\"movieId\"].values.squeeze()\n",
     "\n",
     "    # 2. Handle Missing Movie Title\n",
@@ -2430,7 +2428,7 @@
     "    # 4. Use KNN to Find Similar Movies\n",
     "    distances, indices = model_knn.kneighbors(movie_user_ratings.reshape(1, -1))\n",
     "\n",
-    "    # 5. Extract Recommended Movie Titles (Assuming movie IDs lead to titles)\n",
+    "    # 5. Extract Recommended Movie Titles\n",
     "    recommended_movie_ids = df_movies.loc[indices[0]][\"movieId\"].tolist()\n",
     "    recommended_titles = [df_movies.loc[idx][\"title\"] for idx in recommended_movie_ids]\n",
     "\n",
@@ -2442,7 +2440,7 @@
     "    for i in range(min(n_recommendations, len(recommended_titles))):\n",
     "        print(f\"- {recommended_titles[i]}\")\n",
     "\n",
-    "# Example Usage (assuming you have movie_title, mat_movies_users, model_knn, n_recommendations, and df_movies defined)\n",
+    "# Example \n",
     "recommender(movie_title, mat_movies_users, model_knn, 5, df_movies)"
    ]
   },
