--- a/code_alongs/lec10_cnn.ipynb
+++ b/code_alongs/lec10_cnn.ipynb
@@ -830,12 +830,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# short patience for demo\n",
-    "early_stopper = EarlyStopping(monitor=\"val_loss\", mode=\"min\", patience=3)\n",
+    "early_stopper = EarlyStopping(monitor=\"val_loss\", mode=\"min\", patience=3, restore_best_weights=True)\n",
     "\n",
     "def evaluate_model(**kwarg):\n",
     "    model = cnn_model(**kwarg)\n",
@@ -853,6 +853,74 @@
     "    val_acc = metrics[\"val_acc\"].iloc[-1]\n",
     "    \n",
     "    return val_acc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\arthu\\OneDrive\\Documentos\\VS\\OPA - Semester 2\\Python\\AI2-Arthur-Lopez-OPA23\\venv\\Lib\\site-packages\\keras\\src\\layers\\convolutional\\base_conv.py:99: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 11ms/step - acc: 0.3858 - loss: 1.7353 - val_acc: 0.5467 - val_loss: 1.2705\n",
+      "Epoch 2/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m13s\u001b[0m 10ms/step - acc: 0.6055 - loss: 1.1156 - val_acc: 0.6298 - val_loss: 1.0467\n",
+      "Epoch 3/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m13s\u001b[0m 10ms/step - acc: 0.6800 - loss: 0.9094 - val_acc: 0.6767 - val_loss: 0.9393\n",
+      "Epoch 4/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m18s\u001b[0m 14ms/step - acc: 0.7367 - loss: 0.7547 - val_acc: 0.6861 - val_loss: 0.9020\n",
+      "Epoch 5/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 15ms/step - acc: 0.7823 - loss: 0.6263 - val_acc: 0.6975 - val_loss: 0.8922\n",
+      "Epoch 6/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m18s\u001b[0m 15ms/step - acc: 0.8149 - loss: 0.5300 - val_acc: 0.7019 - val_loss: 0.9356\n",
+      "Epoch 7/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m18s\u001b[0m 14ms/step - acc: 0.8522 - loss: 0.4226 - val_acc: 0.6982 - val_loss: 0.9442\n",
+      "Epoch 8/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 16ms/step - acc: 0.8825 - loss: 0.3429 - val_acc: 0.7108 - val_loss: 0.9661\n",
+      "Epoch 1/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 16ms/step - acc: 0.4152 - loss: 1.6407 - val_acc: 0.5832 - val_loss: 1.1687\n",
+      "Epoch 2/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 16ms/step - acc: 0.6232 - loss: 1.0770 - val_acc: 0.6454 - val_loss: 1.0177\n",
+      "Epoch 3/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 15ms/step - acc: 0.6858 - loss: 0.9029 - val_acc: 0.6872 - val_loss: 0.9053\n",
+      "Epoch 1/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 15ms/step - acc: 0.4145 - loss: 1.6436 - val_acc: 0.5817 - val_loss: 1.1904\n",
+      "Epoch 2/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m18s\u001b[0m 15ms/step - acc: 0.6196 - loss: 1.0900 - val_acc: 0.6574 - val_loss: 0.9734\n",
+      "Epoch 3/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 17ms/step - acc: 0.6785 - loss: 0.9220 - val_acc: 0.6843 - val_loss: 0.9089\n",
+      "Epoch 1/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 16ms/step - acc: 0.3717 - loss: 1.7507 - val_acc: 0.5610 - val_loss: 1.2485\n",
+      "Epoch 2/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 15ms/step - acc: 0.5666 - loss: 1.2234 - val_acc: 0.6187 - val_loss: 1.0748\n",
+      "Epoch 3/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 15ms/step - acc: 0.6287 - loss: 1.0546 - val_acc: 0.6564 - val_loss: 0.9841\n",
+      "Epoch 1/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m21s\u001b[0m 15ms/step - acc: 0.3716 - loss: 1.7545 - val_acc: 0.5533 - val_loss: 1.2741\n",
+      "Epoch 2/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 15ms/step - acc: 0.5686 - loss: 1.2155 - val_acc: 0.6258 - val_loss: 1.0564\n",
+      "Epoch 3/10\n",
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 15ms/step - acc: 0.6257 - loss: 1.0563 - val_acc: 0.6613 - val_loss: 0.9730\n"
+     ]
+    }
+   ],
+   "source": [
+    "dropout_accuracies = {}\n",
+    "\n",
+    "for dropout_rate in np.arange(.1,.6,.1):\n",
+    "    dropout_rate = np.round(dropout_rate,1)\n",
+    "    dropout_accuracies[dropout_rate] = evaluate_model(dropout_rate=dropout_rate)"
    ]
   }
  ],
