train val test split

--- a/lab_2/lab2.ipynb
+++ b/lab_2/lab2.ipynb
@@ -205,7 +205,7 @@
     "                dest = os.path.join(experiment_path, subfolder, image)\n",
     "                shutil.move(src, dest)\n",
     "\n",
-    "# Call the function to move images to each respective subfolder\n",
+    "# Call the function to move images to each respective subfolder (\"commented\" to avoid multiple additions)\n",
     "#move_images_to_subfolders()\n"
    ]
   },
@@ -241,7 +241,6 @@
     }
    ],
    "source": [
-    "# Iterate over each subfolder and count dogs and cats\n",
     "for subfolder in subfolders:\n",
     "    subfolder_path = os.path.join(experiment_path, subfolder)\n",
     "    dogs_count = len([name for name in os.listdir(subfolder_path) if \"dog\" in name])\n",
